# wordcount-server-rust

./: .env.example  Cargo.toml  LICENSE  README.md
frontend/: index.html
frontend/assets/: script.js
src/: main.rs  redis_store.rs  wordcount.rs
