[package]
name = "my-wordcount-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["multipart"] }
tokio = { version = "1.36", features = ["full"] }
redis = { version = "0.30.0", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tower-http = { version = "0.6.2", features = ["fs"] }
